pi/compiling_error.txt
In file included from /Users/CHeizmann/Documents/workspace_hpc/hpc/pi/pi.c:1:0:
/usr/include/stdio.h:77:9: error: unknown type name '__darwin_off_t'
 typedef __darwin_off_t  fpos_t;
         ^~~~~~~~~~~~~~
In file included from /usr/include/stdio.h:417:0,
                 from /Users/CHeizmann/Documents/workspace_hpc/hpc/pi/pi.c:1:
/usr/include/sys/_types/_off_t.h:30:9: error: unknown type name '__darwin_off_t'
 typedef __darwin_off_t  off_t;
         ^~~~~~~~~~~~~~
